hphp/hack/test/sound_dynamic/typing/sub_function_type_dynamic.bad.php.exp
File "sub_function_type_dynamic.bad.php", line 12, characters 13-15:
Invalid argument (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 8, characters 13-15:
  Expected `int`
  File "sub_function_type_dynamic.bad.php", line 4, characters 20-26:
  But got `dynamic`
File "sub_function_type_dynamic.bad.php", line 13, characters 13-15:
Invalid argument (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 4, characters 20-26:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 9, characters 29-33:
  But got `mixed`
File "sub_function_type_dynamic.bad.php", line 14, characters 13-15:
Invalid argument (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 4, characters 20-26:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 10, characters 19-23:
  But got `mixed`
File "sub_function_type_dynamic.bad.php", line 15, characters 13-15:
Invalid argument (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 4, characters 20-26:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 11, characters 15-15:
  But got `C`
File "sub_function_type_dynamic.bad.php", line 16, characters 13-29:
Invalid argument (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 16, characters 14-16:
  Expected `int`
  File "sub_function_type_dynamic.bad.php", line 4, characters 20-26:
  But got `dynamic`
File "sub_function_type_dynamic.bad.php", line 17, characters 20-26:
Invalid return type (Typing[4110])
  File "sub_function_type_dynamic.bad.php", line 4, characters 20-26:
  Expected `dynamic`
  File "sub_function_type_dynamic.bad.php", line 17, characters 24-24:
  But got `C`
